Update Post: 2024-05-06-데이터베이스 정리

--- a/_posts/2024-05-06-데이터베이스 정리.md
+++ b/_posts/2024-05-06-데이터베이스 정리.md
@@ -244,7 +244,7 @@ where 학생ID = "김xx"
 
 Statement는 입력받은 데이터를 그대로 실행하는 방법이다. PreparedStatement는 미리 쿼리를 작성하고, 매개변수로 채우는 방법이다.
 
-- **Statement**
+- Statement
 
 ```java
 //Creating The Statement Object  
@@ -260,11 +260,8 @@ PreparedStatement prep_statement = con.prepareStatement("update STUDENT set NAME
 // 데이터를 받아 처리
 prep_statement.setString(1, "RAM");   
 prep_statement.setInt(2, 512);
-prep_statement.executeUpdate(); 
+prep_statement.executeUpdate();
 ```
-
-
-참고: [https://www.geeksforgeeks.org/difference-between-statement-and-preparedstatement/](https://www.geeksforgeeks.org/difference-between-statement-and-preparedstatement/)
 
 
 ### SQL Injection
@@ -358,7 +355,8 @@ NoSQL은 수평적으로 확장될 가능성이 높다. 이때, 데이터의 일
 
 각 노드가 네트워크가 차단되어도, 각 네트워크 영역에서는 정상적으로 동작해야 한다.
 
-![Untitled](/assets/img/post/데이터베이스%20정리/2.png)
+
+![cap.png](/assets/img/post/데이터베이스%20정리/2.png)
 
 
 [이미지 출처: [https://www.geeksforgeeks.org/the-cap-theorem-in-dbms/](https://www.geeksforgeeks.org/the-cap-theorem-in-dbms/)]
