Update Post: 2024-06-22-컨테이너와 Docker

--- a/_posts/2024-06-22-컨테이너와 Docker.md
+++ b/_posts/2024-06-22-컨테이너와 Docker.md
@@ -52,12 +52,12 @@ uuidd               1623604             1623524             0                   
 Docker 이전에는 Linux Container(LXC)가 있었다. (관련된 내용은 [LXC 포스팅](https://www.handongbee.com/posts/LXC(Linux-Container)/)에서 확인할 수 있다.) LXC와 비교해서 Docker가 선택받은 이유는 아래와 같다.
 
 1. LXC와 다르게 Application 수준으로 추상화
-	1. LXC는 의존성 설치, 네트워크 설정 등이 필요함 다만 docker 네트워크도 간단히 설정 가능하다.
-	2. LXC는 결국 네트워크 설정, 의존성 등 환경설정에 어려움이 많다. **즉, 일관된 환경을 제공하지 못한다.**
+	- LXC는 의존성 설치, 네트워크 설정 등이 필요하나, docker는 네트워크도 간단히 설정 가능하다.
+	- LXC는 결국 네트워크 설정, 의존성 등 환경설정에 어려움이 많다. **즉, 일관된 환경을 제공하지 못한다.**
 2. UFS(Union File System)로 여러 Layer를 합치는 방식으로 이미지를 관리
-	1. 덕분에 기존의 Layer를 캐싱하는 방식으로 이용할 수 있음(중복 제거)
+	- 기존의 Layer를 캐싱하는 방식으로 이용할 수 있음(중복 제거)
 3. DockerHub, OpenSource
-	1. 덕분에 모든 커뮤니티와 공유하며, 컨테이너 이미지를 쉽게 사용할 수 있다.
+	- 모든 커뮤니티와 공유하며, 컨테이너 이미지를 쉽게 사용할 수 있다.
 
 이런 편리함 때문에 Docker는 선택받을 수 있었다.  장점에 대해 살펴보면, Docker가 Application 수준으로 추상화했다는 것과, DockerHub는 바로 이해가 간다. 하지만 UFS에 대해서는 처음 접할 수 있다. 그렇기에 여기서는 UFS에 대해서만 살펴본다. (UFS와 관련된 포스트는 [여기](https://www.handongbee.com/posts/Docker-Storage/)에서 확인할 수 있다. 아래에서는 간단하게 설명한다.)
 
