Update Post: 2024-06-22-컨테이너와 Docker

--- a/_posts/2024-06-22-컨테이너와 Docker.md
+++ b/_posts/2024-06-22-컨테이너와 Docker.md
@@ -41,7 +41,8 @@ uuidd               1623604             1623524             0                   
 
 1. 네임스페이스를 통해 네트워크, 파일시스템 격리
 2. cgroup을 통해 리소스 양을 제한
-3. ~~chroot를 통해 컨테이너가 바라볼 수 있는 디렉터리를 한정~~ **현재 사용되는 기술은 아님**
+3. ~~chroot를 통해 컨테이너가 바라볼 수 있는 디렉터리를 한정~~
+	1. 탈옥 이슈로 현재 chroot를 사용하지 않고, privot root를 사용한다고 한다. ([카카오 기술블로그](https://tech.kakaoenterprise.com/171))
 
 위와 같은 방법으로 컨테이너를 관리하는 것이 컨테이너 엔진이다. 가장 유명한 컨테이너 엔진은 Docker이다. 하지만, Docker만 있었던 것은 아니다. 그렇다면 어떻게 Docker가 선택받을 수 있게 되었을까?
 
