--- a/_posts/2024-08-31-Docker 들여다보기.md
+++ b/_posts/2024-08-31-Docker 들여다보기.md
@@ -17,13 +17,8 @@ KANS 스터디 1주차 Docker 들여다보기
 > 💡 **KANS 스터디**  
 > CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.  
 >   
-> 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
+> 스터디에 관심이 있으신 분은 [CloudNet Blog](https://gasidaseo.notion.site/CloudNet-Blog-c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
-
-	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
-
-
-	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
 ## Docker Storage
