--- a/_posts/2024-05-06-데이터베이스 정리.md
+++ b/_posts/2024-05-06-데이터베이스 정리.md
@@ -3,7 +3,7 @@ layout: post
 title: 데이터베이스 정리
 date: 2024-05-06 09:10 +0900 
 description: 데이터베이스 정리
-category: [Database, Basic] 
+category: [Database, 요약정리] 
 tags: [Database, 정리, 요약] 
 pin: false
 math: true
