--- a/_posts/2024-08-31-Docker 없이 컨테이너 만들기 .md
+++ b/_posts/2024-08-31-Docker 없이 컨테이너 만들기 .md
@@ -3,7 +3,7 @@ layout: post
 title: Docker 없이 컨테이너 만들기 (격리)
 date: 2024-08-31 09:00 +0900 
 description: KANS 스터디 1주차 Docker없이 컨테이너 만들기 (격리)
-category: [Kubernetes, Network] 
+category: [Docker, 격리기술] 
 tags: [KANS, CloudNet, Kubernetes, Network, KANS#1] 
 pin: false
 math: true
