--- a/_posts/2024-08-31-Docker 들여다보기.md
+++ b/_posts/2024-08-31-Docker 들여다보기.md
@@ -3,7 +3,7 @@ layout: post
 title: Docker 들여다보기
 date: 2024-08-31 09:00 +0900 
 description: KANS 스터디 1주차 Docker 들여다보기
-category: [Docker, Network] 
+category: [Docker, Basic] 
 tags: [KANS, CloudNet, Kubernetes, Network, KANS#1] 
 pin: false
 math: true
