--- a/_posts/2024-09-06-PAUSE 컨테이너(Pod).md
+++ b/_posts/2024-09-06-PAUSE 컨테이너(Pod).md
@@ -33,7 +33,8 @@ KANS 스터디 2주차 PAUSE 컨테이너 알아보기
 
 먼저 컨테이너의 역할을 먼저 확인하고 가면 아래와 같습니다. 추후 실습에서 한번 더 확인합니다.
 
-- 파드에서 Linux **네임스페이스 공유의 기반** 역할을 합니다.
+- 파드에서 Linux **네임스페이스 공유의 유지** 역할을 합니다.
+  - 생성은 Containerd 기준으로 CRI에서 진행합니다. 참고 [악분님 블로그](https://malwareanalysis.tistory.com/769)
 - 각 파드에 대한 **PID 1 역할**을 하며 **좀비 프로세스를 제거한다.**
 
 #### 코드
@@ -303,8 +304,9 @@ crictl을 이용해서 네임스페이스 정보를 확인하면 Pause가 생성
 
 ### 정리
 
-1. Pause 컨테이너가 net/ipc/uts 네임스페이스를 생성하고 공유한다.
+1. Pause 컨테이너가 net/ipc/uts 네임스페이스를 ~~생성하고~~ 공유한다. 
 	1. init 프로세스의 역할도 수행하여, 좀비 프로세스를 제거한다.
+	2. network 네임스페이스는 CRI에서 생성한다고 한다. [악분님 블로그](https://malwareanalysis.tistory.com/769) 참고.
 2. 같은 파드 내의 컨테이너는 네트워크 스택이 동일하다.
 	1. 그렇기에 container port를 조심해서 세팅해야 한다. (중복되면 안된다.)
 	2. 사이드카로 붙이면, 쉽게 네트워크 테스트가 가능하다.
