2024-09-16-Calico 이해하기.md 업데이트

--- a/_posts/2024-09-16-Calico 이해하기.md
+++ b/_posts/2024-09-16-Calico 이해하기.md
@@ -4,7 +4,7 @@ title: Calico 알아보기
 date: 2024-09-15 09:00 +0900 
 description: Calico 알아보기
 category: [Kubernetes, Network] 
-tags: [KANS, CloudNet, Kubernetes, Network, KANS# ] 
+tags: [KANS, CloudNet, Kubernetes, Network, KANS#3] 
 pin: false
 math: true
 mermaid: true
