--- a/_posts/2024-09-28-서비스 네트워크.md
+++ b/_posts/2024-09-28-서비스 네트워크.md
@@ -225,45 +225,45 @@ root@myk8s-worker:/# iptables -t nat -S
 
 
 > 💡 **관련 옵션 및 명령어**  
-> - **`S`**: 현재 설정된 iptables 규칙을 출력합니다.  
+> - `S`: 현재 설정된 iptables 규칙을 출력합니다.  
 >   
-> - **`-t nat`**: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.  
+> - `-t nat`: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.  
 >   
-> - **`N`**: 새로운 체인을 생성합니다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.  
+> - `N`: 새로운 체인을 생성합니다. 예를 들어, `N KUBE-SVC-ERIFXISQEP7F7OF4`는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.  
 >   
-> - **`A`**: 규칙추가  
+> - `A`: 규칙추가  
 >   
-> - **`d`**: 목적지 주소를 지정합니다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.  
+> - `d`: 목적지 주소를 지정합니다. 예를 들어, `d 10.43.239.29/32`는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.  
 >   
-> - **`s`** 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.  
+> - `s` 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, `-s 10.42.0.0/16`은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.  
 >   
-> - **`p`**: 프로토콜을 지정합니다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.  
+> - `p`: 프로토콜을 지정합니다. `p tcp`는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.  
 >   
-> - **`m comment`**: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.  
+> - `m comment`: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.  
 >   
-> - **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정합니다.  
+> - `-comment`: comment 모듈에 대한 옵션으로, 주석을 지정합니다.  
 >   
-> - **`-sport`****,** **`-dport`**: 대상 포트를 지정합니다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.  
+> - `-sport`, `-dport`: 대상 포트를 지정합니다. 예를 들어, `-dport 80`는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.  
 >   
-> - **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다.  
+> - `j`: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다.  
 >   
-> - **`-i, -o`** : input interface, output interface  
+> - `-i, -o` : input interface, output interface  
 >   
-> - **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
+> - `!` 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  `! -s 10.42.0.0/16`은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
-	- **`S`**: 현재 설정된 iptables 규칙을 출력합니다.
-	- **`-t nat`**: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.
-	- **`N`**: 새로운 체인을 생성합니다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.
-	- **`A`**: 규칙추가
-	- **`d`**: 목적지 주소를 지정합니다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.
-	- **`s`** 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.
-	- **`p`**: 프로토콜을 지정합니다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.
-	- **`m comment`**: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.
-	- **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정합니다.
-	- **`-sport`****,** **`-dport`**: 대상 포트를 지정합니다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.
-	- **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다.
-	- **`-i, -o`** : input interface, output interface
-	- **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
+	- `S`: 현재 설정된 iptables 규칙을 출력합니다.
+	- `-t nat`: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.
+	- `N`: 새로운 체인을 생성합니다. 예를 들어, `N KUBE-SVC-ERIFXISQEP7F7OF4`는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.
+	- `A`: 규칙추가
+	- `d`: 목적지 주소를 지정합니다. 예를 들어, `d 10.43.239.29/32`는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.
+	- `s` 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, `-s 10.42.0.0/16`은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.
+	- `p`: 프로토콜을 지정합니다. `p tcp`는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.
+	- `m comment`: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.
+	- `-comment`: comment 모듈에 대한 옵션으로, 주석을 지정합니다.
+	- `-sport`, `-dport`: 대상 포트를 지정합니다. 예를 들어, `-dport 80`는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.
+	- `j`: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다.
+	- `-i, -o` : input interface, output interface
+	- `!` 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  `! -s 10.42.0.0/16`은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
 쿠버네티스 서비스에서는 iptables를 아래와 같이 적용한다고 한다.
 
@@ -292,6 +292,9 @@ root@myk8s-worker:/# iptables -t nat -S
 
 
 이제 위에서 학습한 내용을 실습한다. 우선, 서비스가 정말 고정적인 엔드포인트를 제공하고 부하분산을 진행하는지 테스트한다.
+
+
+#### 리소스 YAML
 
 - 테스트 파드
 
@@ -380,6 +383,9 @@ spec:
 
 서비스는 :8000 포트로 들어오는 트래픽 webpod1,2,3:80 포트로 라우팅한다.
 
+
+#### ClusterIP
+
 - net-pod에 접속하여 clusterIP에 접근해본다.
 
 ```bash
@@ -437,6 +443,66 @@ iptables -S -t nat | grep KUBE-SVC-KBDEBIL6IU6WL7RF
 -A KUBE-SVC-KBDEBIL6IU6WL7RF -m comment --comment "default/svc-clusterip:svc-webport -> 10.10.2.2:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-DOIEFYKPESCDTYCH
 -A KUBE-SVC-KBDEBIL6IU6WL7RF -m comment --comment "default/svc-clusterip:svc-webport -> 10.10.3.3:80" -j KUBE-SEP-K7ALM6KJRBAYOHKX
 ```
+
+
+#### NodePort
+
+
+위에서 사용한 svc-clusterip 서비스를 NodePort Type으로 수정한다.
+
+
+```bash
+k edit svc svc-clusterip
+```
+
+
+![image.png](/assets/img/post/서비스%20네트워크/9.png)
+
+
+iptables에서 nodeport로 필터링을 하면 아래와 같이 svc-clusterip에 대한 규칙을 확인할 수 있다.
+
+
+```bash
+iptables -S -t nat | grep NODEPORT
+-N KUBE-NODEPORTS
+-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "default/svc-clusterip:svc-webport" -m tcp --dport 30007 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-KBDEBIL6IU6WL7RF
+-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-clusterip:svc-webport" -m tcp --dport 30007 -j c
+-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
+```
+
+
+30007번 포트로 들어오는 패킷은 `KUBE-EXT-KBDEBIL6IU6WL7RF` 체인으로 보내고, 이는 `KUBE-SVC-KBDEBIL6IU6WL7RF` 으로 향하는 것을 확인할 수 있다.
+
+
+```bash
+iptables -S -t nat | grep KUBE-EXT-KBDEBIL6IU6WL7RF
+...
+-A KUBE-EXT-KBDEBIL6IU6WL7RF -j KUBE-SVC-KBDEBIL6IU6WL7RF
+...
+-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "default/svc-clusterip:svc-webport" -m tcp --dport 30007 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-KBDEBIL6IU6WL7RF
+-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-clusterip:svc-webport" -m tcp --dport 30007 -j KUBE-EXT-KBDEBIL6IU6WL7RF
+```
+
+
+`KUBE-SVC-KBDEBIL6IU6WL7RF` 체인은 위의 ClusterIP와 같이 파드의 엔드포인트로 라우팅하는 체인이다. 다시 한번 확인해보면 
+
+
+```bash
+iptables -S -t nat | grep KUBE-SVC-KBDEBIL6IU6WL7RF
+-N KUBE-SVC-KBDEBIL6IU6WL7RF
+-A KUBE-EXT-KBDEBIL6IU6WL7RF -j KUBE-SVC-KBDEBIL6IU6WL7RF
+-A KUBE-SERVICES -d 10.200.1.201/32 -p tcp -m comment --comment "default/svc-clusterip:svc-webport cluster IP" -m tcp --dport 9000 -j KUBE-SVC-KBDEBIL6IU6WL7RF
+-A KUBE-SVC-KBDEBIL6IU6WL7RF ! -s 10.10.0.0/16 -d 10.200.1.201/32 -p tcp -m comment --comment "default/svc-clusterip:svc-webport cluster IP" -m tcp --dport 9000 -j KUBE-MARK-MASQ
+-A KUBE-SVC-KBDEBIL6IU6WL7RF -m comment --comment "default/svc-clusterip:svc-webport -> 10.10.1.2:80" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-TBW2IYJKUCAC7GB3
+-A KUBE-SVC-KBDEBIL6IU6WL7RF -m comment --comment "default/svc-clusterip:svc-webport -> 10.10.2.2:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-DOIEFYKPESCDTYCH
+-A KUBE-SVC-KBDEBIL6IU6WL7RF -m comment --comment "default/svc-clusterip:svc-webport -> 10.10.3.3:80" -j KUBE-SEP-K7ALM6KJRBAYOHKX
+```
+
+
+파드로 라우팅되는 것을 확인할 수 있다.
+
+
+즉, ClusterIP와 비교하여 `KUBE-NODEPORT` → `KUBE-EXT-...` 체인이 추가된다.
 
 
 ### 정리
