update: 잘못된 내용 수정

--- a/_posts/2024-09-29-서비스 네트워크 session 옵션 살펴보기.md
+++ b/_posts/2024-09-29-서비스 네트워크 session 옵션 살펴보기.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 서비스 네트워크 세부 옵션 살펴보기
+title: 서비스 네트워크 session 옵션 살펴보기
 date: 2024-09-29 09:00 +0900 
-description: 서비스 네트워크 세부 옵션 살펴보기
+description: 서비스 네트워크 session 옵션 살펴보기
 category: [Kubernetes, Network] 
 tags: [KANS, CloudNet, Kubernetes, Network, KANS#4] 
 pin: false
@@ -11,7 +11,7 @@ mermaid: true
 ---
 
 
-서비스 네트워크 세부 옵션 살펴보기
+서비스 네트워크 session 옵션 살펴보기
 
 <!--more-->
 
@@ -21,11 +21,6 @@ mermaid: true
 >   
 > 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
-
-	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
-
-
-	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
 ### 들어가며
