fix: callout update

--- a/_posts/2024-10-27-ebpf.md
+++ b/_posts/2024-10-27-ebpf.md
@@ -4,12 +4,11 @@ title: ebpf 알아보기
 date: 2024-10-26 09:00 +0900 
 description: ebpf 알아보기
 category: [Linux, Kernel] 
-tags: [KANS, CloudNet, Kubernetes, Network, KANS#8 ] 
+tags: [KANS, CloudNet, Kubernetes, Network, KANS#8, Cilium, ebpf, Kernel] 
 pin: false
 math: true
 mermaid: true
 ---
-
 
 리눅스에서 혁신적인 기술로 불리는 ebpf 알아보기
 
@@ -22,10 +21,6 @@ mermaid: true
 > 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
-	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
-
-
-	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
 ## kernel 수정 방식
@@ -229,16 +224,6 @@ BPF에서 프로세스 ID와 Name을 받아 이를 event 구조체에 작성한 
 >   
 > “Populates the first argument address with the current process name. It should be a pointer to a char array of at least size TASK_COMM_LEN, which is defined in linux/sched.h.”
 
-	- **`execve`**`()`
-
-	경로명을 참조하는 프로그램을 실행할 때 호출되는 함수이다. 관련 [문서](https://man7.org/linux/man-pages/man2/execve.2.html)
-
-	- `bpf_get_current_comm`의 자세한 내용은  [bcc](https://github.com/iovisor/bcc/blob/master/docs/reference_guide.md#6-bpf_get_current_comm)에서 확인할 수 있다.
-
-	Syntax: `bpf_get_current_comm(char *buf, int size_of_buf)`
-
-
-	“Populates the first argument address with the current process name. It should be a pointer to a char array of at least size TASK_COMM_LEN, which is defined in linux/sched.h.”
 
 - **전체코드**
 
