--- a/_posts/2024-10-27-Cilium 살펴보기.md
+++ b/_posts/2024-10-27-Cilium 살펴보기.md
@@ -4,7 +4,7 @@ title: Cilium 살펴보기
 date: 2024-10-26 09:00 +0900 
 description: Cilium 살펴보기
 category: [Kubernetes, Network] 
-tags: [KANS, CloudNet, Kubernetes, Network, KANS# ] 
+tags: [KANS, CloudNet, Kubernetes, Network, KANS#8, Cilium ] 
 pin: false
 math: true
 mermaid: true
@@ -19,10 +19,6 @@ Cilium 살펴보기
 > 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
-	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
-
-
-	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
 ### 들어가며
