--- a/_posts/2024-10-27-Cilium 살펴보기.md
+++ b/_posts/2024-10-27-Cilium 살펴보기.md
@@ -4,7 +4,7 @@ title: Cilium 살펴보기
 date: 2024-10-26 09:00 +0900 
 description: Cilium 살펴보기
 category: [Kubernetes, Network] 
-tags: [KANS, CloudNet, Kubernetes, Network, KANS# ] 
+tags: [KANS, CloudNet, Kubernetes, Network, KANS#8, Cilium ] 
 pin: false
 math: true
 mermaid: true
