Update Post: 2025-02-02-TCP_Linux

--- a/_posts/2025-02-02-TCP_Linux.md
+++ b/_posts/2025-02-02-TCP_Linux.md
@@ -194,7 +194,7 @@ struct tcp_sock {
 ## 핸드셰이크
 
 
-이제 본격적으로 핸드셰이크 과정을 살펴보자. TCP는 3-way 핸드셰이크를 진행한다. `SYN > SYN + ACK + ACK` 으로 진행되는데, 순서대로 이를 살펴본다.
+이제 본격적으로 핸드셰이크 과정을 살펴보자. TCP는 3-way 핸드셰이크를 진행한다. `SYN` > `SYN + ACK` > `ACK` 으로 진행되는데, 순서대로 이를 살펴본다.
 
 
 ### SYN(`TCP_LISTEN` > **`TCP_SYN_SENT`**)
