--- a/_posts/2024-08-31-Docker 들여다보기.md
+++ b/_posts/2024-08-31-Docker 들여다보기.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: Docker 들여다보기
+title: Docker CI 알아보기
 date: 2024-08-31 09:00 +0900 
-description: KANS 스터디 1주차 Docker 들여다보기
-category: [Docker, Basic] 
+description: Docker CI 
+category: [Docker, Network] 
 tags: [KANS, CloudNet, Kubernetes, Network, KANS#1] 
 pin: false
 math: true
 mermaid: true
 ---
-KANS 스터디 1주차 Docker 들여다보기
+KANS 스터디 1주차 Docker CI 알아보기
 
 <!--more-->
 
@@ -17,126 +17,28 @@ KANS 스터디 1주차 Docker 들여다보기
 > 💡 **KANS 스터디**  
 > CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.  
 >   
-> 스터디에 관심이 있으신 분은 [CloudNet Blog](https://gasidaseo.notion.site/CloudNet-Blog-c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
+> 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
-
-## Docker Storage
-
-
-### **UFS 란?**
+	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
 
 
-유니온 파일 시스템은 다른 파일 시스템위에서 작동한다. 파일시스템이 다른 여러 디렉터리를 단일 디렉터리로 마운트한다. 아래의 그림과 같은 결과를 낼 수 있다. UFS의 종류로는 UnionFS, AUFS, OverlayFS가 있다. [링크](https://medium.com/@knoldus/unionfs-a-file-system-of-a-container-2136cd11a779)에서 자세한 사진과 설명을 확인할 수 있다.
+	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
-**특징에 대해 알아보자**
-
-- 여러 레이어를 논리적으로 병합할 수 있다.(물리적인 행위 없이)
-	- 레이어들을 합쳐서 하나의 이미지를 만들 수 있다.
-- 읽기 전용 하위레이어, 쓰기 가능한 상위 레이어로 구성된다.
-	- 컨테이너 내부에서 여러 행동을 해도 베이스 이미지는 변하지 않는다.
-- 하위 레이어부터 읽기 시작하며, 덮어 쓰는 방식이다.
-	- 위에 있는 레이어가 이전 레이어들을 덮어쓴다.
-- COW(copy on write)
-	- 내용을 수정한 경우에만 복사한 뒤 쓰기 작업을 하여 레이어를 추가로 생성한다. 수정하지않는다면, 별도의 복사본 없이 원본의 내용을 참조한다. 결국 수정을 진행해도, 하위 레이어에게 영향을 주지 않는다.
-
-### **직접 확인하기**
+### 들어가며
 
 
-현재 실행중인 mysql 컨테이너에 대한 UFS를 확인한다. overlay2를 스토리지 드라이버로 사용하고 있으며, 관련 내용은 아래와 같다.
-
-- LowerDir: 이미지(하위)레이어들을 의미하는 디렉터리로, 여러개의 디렉터리가 참조된 것을 확인할 수 있다.
-- UpperDir: 컨테이너 레이어에 해당하며, 쓸 수 있는 레이어이다.
-- MergeDir: 모든 레이어들을 논리적으로 병합한 디렉터리이다.
-
-하나의 컨테이너를 생성하고 분석하면, 다음과 같이 UFS 파일시스템을 확인할 수 있다.
-
-
-```bash
-$ docker inspect db9d062688a7
-[
-    {
-				...
-        "Path": "docker-entrypoint.sh",
-        "Args": [
-            "mysqld"
-        ],
-...
-"GraphDriver": {
-            "Data": {
-                "LowerDir": "/var/lib/docker/overlay2/00593ad613202ac2699eb9b09dde4c83aa77608ca0288eb2512c0a71f885dff4-init/diff:/var/lib/docker/overlay2/d437f4b8d67dc5c54dc2bddac279e02fb428441ef289a31ceda1f6058e979428/diff:/var/lib/docker/overlay2/48ab14e09f5c034ad73ad8a9a8d83560b1f81befa23663bd9eb3b10ba1652f9a/diff:/var/lib/docker/overlay2/e5d14078ec49922b7deaa154ad483c2b316691ab89c574196e77bbb79b30c2cd/diff:/var/lib/docker/overlay2/938c8c24954661d9a2b3dfcebbbbe1a26f852dc2075fb6b588fb3a5ce5cd7f4b/diff:/var/lib/docker/overlay2/5fd72d8d14da267b3e09fe0f616f187356112c1146208ae5f7fed4db1217e793/diff:/var/lib/docker/overlay2/616a42343210fd51a81760f6ad701eb149d8eec58a5761763bce6350400ea4a6/diff:/var/lib/docker/overlay2/aa3807c9c668b67e64e22fa4108201444991d9abf773cbe7434c8feabfe6a71e/diff:/var/lib/docker/overlay2/a828814633670fc0530ec9532f97adbc27fcfb2ed70d9b2d70271925528953d7/diff:/var/lib/docker/overlay2/075f6481941c77bcd17a8e9c170af3b935516c2912775e3878457d9c713482ec/diff:/var/lib/docker/overlay2/171447619b0e0b315905d28f84fb77f22c0bb001ff22cf70a22a3ab146a8cd32/diff:/var/lib/docker/overlay2/f21cfcce699c4655ff01b5069be844326d3d7de51a56d8b993444ce7e545533b/diff",
-                "MergedDir": "/var/lib/docker/overlay2/00593ad613202ac2699eb9b09dde4c83aa77608ca0288eb2512c0a71f885dff4/merged",
-                "UpperDir": "/var/lib/docker/overlay2/00593ad613202ac2699eb9b09dde4c83aa77608ca0288eb2512c0a71f885dff4/diff",
-                "WorkDir": "/var/lib/docker/overlay2/00593ad613202ac2699eb9b09dde4c83aa77608ca0288eb2512c0a71f885dff4/work"
-            },
-            "Name": "overlay2"
-        },
-```
-
-
-Merged 디렉터리에 들어가, 컨테이너의 현재 환경을 확인할 수 있다. 아래의 내용은 컨테이너의 파일시스템의 환경과 같다.
-
-
-```bash
-$ pwd
-/var/lib/docker/overlay2/00593ad613202ac2699eb9b09dde4c83aa77608ca0288eb2512c0a71f885dff4/merged
-$ ls
-bin   dev                         entrypoint.sh  home  lib64  mnt  proc  run   srv  tmp  var
-boot  docker-entrypoint-initdb.d  etc            lib   media  opt  root  sbin  sys  usr
-```
-
-- 이제 파일을 변경하여, 구조가 어떻게 변경되나 확인한다.
-	- TEST 컨테이너 내부에 들어가 TEST 파일을 생성한다.
-
-```bash
-$ docker exec -it nginx /bin/bash
-root@d949252e0584:/# ls
-bin   dev		   docker-entrypoint.sh  home  lib32  libx32  mnt  proc  run   srv  tmp  var
-boot  docker-entrypoint.d  etc			 lib   lib64  media   opt  root  sbin  sys  usr
-root@d949252e0584:/# touch TEST
-root@d949252e0584:/# echo "Hello World" >> TEST
-root@d949252e0584:/# ls
-TEST  boot  docker-entrypoint.d   etc	lib    lib64   media  opt   root  sbin	sys  usr
-bin   dev   docker-entrypoint.sh  home	lib32  libx32  mnt    proc  run   srv	tmp  var
-```
-
-- 생성결과, 아래와 같이 UpperDir에 수정이 생기고 mergedDir에 반영된 것을 확인할 수 있다.
-
-```bash
-$ ls diff/
-etc  root  run  TEST  var
-
-$ ls merged/
-bin   dev                  docker-entrypoint.sh  home  lib32  libx32  mnt  proc  run   srv  TEST  usr
-boot  docker-entrypoint.d  etc                   lib   lib64  media   opt  root  sbin  sys  tmp   var
-```
-
-- 당연히 하위 이미지에는 영향이 없다.
-
-```bash
-$ cat lower
-l/GGR2QTICSDMGGT435LDE3Q5K57:l/F3Z3MQKSQBX4427T3BLVW7WQ3V:l/NVY3E2UN46ZACWXGXTDH6KZFAH:l/KSAXXJG4HUDPRHNFTREQRW6GQP:l/OEDWEIG5DYVXQIGINX5EX46AKC:l/UD5R4HZWACASR7M2HB7JTCCLTY:l/4GIAVUELBN3MA3FQSY6CCFRLHL:l/2Y2JFZUFNEIAHWYTZPCBMSG23A
-```
-
-- `docker diff` 명령어를 통해, 다시 한번 변경사항을 확인한다.
-	- C는 변경, A는 추가, D는 삭제를 의미합니다.
-
-```bash
-$ docker diff d949252e0584
-A /TEST
-C /etc
-C /etc/nginx
-C /etc/nginx/conf.d
-C /etc/nginx/conf.d/default.conf
-...
-```
-
-
-우리가 생성한 파일인 TEST가 맨위에 `A`로 잘 확인된다.
+컨테이너 기반의 애플리케이션을 운영하고 있다면, CI 과정에서 컨테이너 이미지 빌드가 필요하다. 여기서는 Docker 기반으로 이미지를 빌드하는 방법을 알아본 후 직접 작업해보며 빌드 과정에서 발생할 수 있는 문제점을 살펴본다. 마지막으로 Kaniko와 같은 대체방안을 살펴보며 마무리한다.
 
 
 ## Docker CI
+
+
+Docker CI를 위해선 DinD(Docker in Docker) 혹은 컨테이너 내부에서도 docker를 조작할 수 있게 socket 마운트가 필요하다. 우선 socket에 대해 살펴보자.
+
+
+#### socket
 
 
 docker는 Unix domain-socket을 사용한다. socket을 통해 docker daemon과 통신하므로 Host에 있는 docker socket을 사용할 수 있다면, 컨테이너 내부에서도 docker를 사용할 수 있다.
@@ -156,6 +58,9 @@ dockerd 3966 root    4u  unix 0xffff966d51faddc0      0t0 31848 /run/docker.sock
 ### DinD vs mount docker.socket
 
 
+이제 본격적으로 DinD와 socket 마운트 방식을 비교하자.
+
+
 [docker community](https://forums.docker.com/t/docker-in-docker-vs-mounting-var-run-docker-sock/9450)와 [jpetazzo Post](https://jpetazzo.github.io/2015/09/03/do-not-use-docker-in-docker-for-ci/)에서 DinD와 docker.socket mount의 차이가 잘 정리되어있다. 간단하게 요약하면, 아래와 같다.
 
 1. `--privileged` 로 인해 SElinux와 같은 보안 모듈과 충돌할 수 있다.
@@ -165,22 +70,32 @@ dockerd 3966 root    4u  unix 0xffff966d51faddc0      0t0 31848 /run/docker.sock
 
 3. 도커 컨테이너에서 컨테이너를 생성해도, Host Docker에서 컨테이너가 생성되므로 캐시 효율성이 높아진다.
 
-아래와 같은 방식으로 DinD가 아닌 mount 방식으로 Jenkins CI를 구축할 수 있다.
+결론적으로 보안상, 성능 차원에서 DinD보다 socket mount 방식이 강력히 추천된다. 이제 socket mount 방식으로 컨테이너안에서 이미지를 빌드하는 방법을 알아보자.
 
+
+#### 환경
+
+
+Jenkins를 컨테이너 기반으로 가동하고, 해당 컨테이너에 socket을 마운트하여 컨테이너 이미지를 빌드한다.
+
+- Jenkins 컨테이너 생성
 
 ```bash
 docker run -d -p 8080:8080 -p 50000:50000 --name jenkins-server --restart=on-failure -v jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock -v /usr/bin/docker:/usr/bin/docker jenkins/jenkins
-
 ```
 
-- Init 비밀번호 확인
+
+아래의 명령어를 수행하면 Init 비밀번호를 확인할 수 있다.
+
 
 ```bash
 docker exec -it jenkins-server cat /var/jenkins_home/secrets/initialAdminPassword
-...비밀번호...
 ```
 
-- docker api 사용가능여부 확인
+- docker api 가능여부 확인
+
+docker api 사용가능여부 확인해보면 정상적으로 사용할 수 있는 것을 알 수 있다.
+
 
 ```bash
 docker exec -it --user 0 jenkins-server docker ps
@@ -197,19 +112,25 @@ root@8266345972f8:/# usermod -aG docker jenkins
 
 ```
 
-- 접속 확인
+
+실제 Jenkins 유저로 접속하여 API를 확인한다.
+
 
 ```bash
-$ docker ps
+docker ps
 CONTAINER ID   IMAGE             COMMAND                  CREATED       STATUS       PORTS                                                                                      NAMES
 8266345972f8   jenkins/jenkins   "/usr/bin/tini -- /u…"   1 hours ago   Up 1 hours   0.0.0.0:8080->8080/tcp, :::8080->8080/tcp, 0.0.0.0:50000->50000/tcp, :::50000->50000/tcp   jenkins-server
 ```
 
-- 서버의 IP주소의 8080 포트로 접속하면, 아래와 같이 Jenkins를 확인할 수 있다.
 
-![image.png](/assets/img/post/Docker%20들여다보기/1.png)
+서버의 IP주소의 8080 포트로 접속하면, 아래와 같이 Jenkins를 확인할 수 있다.
 
-- docker pipeline pulgin을 설치 후 아래와 같은 간단한 파이프라인을 만든다.
+
+![image.png](/assets/img/post/Docker%20CI%20알아보기/1.png)
+
+
+docker pipeline pulgin을 설치 후 아래와 같은 간단한 파이프라인을 만든다.
+
 
 ```groovy
 pipeline {
@@ -269,9 +190,11 @@ pipeline {
 
 ```
 
-- Job을 시작하면 아래와 같이 잘 동작한다.
 
-![image.png](/assets/img/post/Docker%20들여다보기/2.png)
+Job을 시작하면 아래와 같이 잘 동작한다.
+
+
+![image.png](/assets/img/post/Docker%20CI%20알아보기/2.png)
 
 
 또, 호스트 서버에서 이미지 확인할 수 있다.
@@ -289,13 +212,16 @@ alpine                 latest    324bc02ae123   5 weeks ago      7.8MB
 ### 대안 방법
 
 
+컨테이너 이미지 빌드에 Docker 자체를 사용하지 않는 방식이 존재한다. 
+
+
 #### kaniko
 
 
 DinD는 도커자체에서 sudo 권한이 필요하므로, 컨테이너가 root 권한을 가지며 이는 보안상 좋지 않다. 이를 위해 Kaniko가 나오게된다. 루트 권한없이, 컨테이너 이미지를 빌드할 수 있는 도구이다. 구글에서 만들었으며, 윈도우 컨테이너 이미지는 지원하지 않는다고 한다.
 
 
-![kaniko-arch.webp](/assets/img/post/Docker%20들여다보기/3.webp)
+![kaniko-arch.webp](/assets/img/post/Docker%20CI%20알아보기/3.webp)
 
 
 출처: [https://blog.nashtechglobal.com/deep-dive-into-kaniko-understanding-the-architecture-and-workflow/](https://blog.nashtechglobal.com/deep-dive-into-kaniko-understanding-the-architecture-and-workflow/)
