--- a/_posts/2024-08-31-Docker 들여다보기.md
+++ b/_posts/2024-08-31-Docker 들여다보기.md
@@ -20,11 +20,6 @@ KANS 스터디 1주차 Docker CI 알아보기
 > 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
-	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
-
-
-	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
-
 
 ### 들어가며
 
@@ -126,7 +121,7 @@ CONTAINER ID   IMAGE             COMMAND                  CREATED       STATUS  
 서버의 IP주소의 8080 포트로 접속하면, 아래와 같이 Jenkins를 확인할 수 있다.
 
 
-![image.png](/assets/img/post/Docker%20CI%20알아보기/1.png)
+![image.png](/assets/img/post/Docker%20들여다보기/1.png)
 
 
 docker pipeline pulgin을 설치 후 아래와 같은 간단한 파이프라인을 만든다.
@@ -194,7 +189,7 @@ pipeline {
 Job을 시작하면 아래와 같이 잘 동작한다.
 
 
-![image.png](/assets/img/post/Docker%20CI%20알아보기/2.png)
+![image.png](/assets/img/post/Docker%20들여다보기/2.png)
 
 
 또, 호스트 서버에서 이미지 확인할 수 있다.
@@ -221,7 +216,7 @@ alpine                 latest    324bc02ae123   5 weeks ago      7.8MB
 DinD는 도커자체에서 sudo 권한이 필요하므로, 컨테이너가 root 권한을 가지며 이는 보안상 좋지 않다. 이를 위해 Kaniko가 나오게된다. 루트 권한없이, 컨테이너 이미지를 빌드할 수 있는 도구이다. 구글에서 만들었으며, 윈도우 컨테이너 이미지는 지원하지 않는다고 한다.
 
 
-![kaniko-arch.webp](/assets/img/post/Docker%20CI%20알아보기/3.webp)
+![kaniko-arch.webp](/assets/img/post/Docker%20들여다보기/3.webp)
 
 
 출처: [https://blog.nashtechglobal.com/deep-dive-into-kaniko-understanding-the-architecture-and-workflow/](https://blog.nashtechglobal.com/deep-dive-into-kaniko-understanding-the-architecture-and-workflow/)
