--- a/_posts/2024-08-31-Docker 없이 컨테이너 만들기 .md
+++ b/_posts/2024-08-31-Docker 없이 컨테이너 만들기 .md
@@ -19,10 +19,6 @@ KANS 스터디 1주차 Docker없이 컨테이너 만들기 #격리
 > 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
-	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
-
-
-	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
 아래의 내용은 [Kakao](https://netpple.github.io/docs/make-container-without-docker/ifkakao2022-handson) 발표자료와 [영상](https://www.youtube.com/watch?v=mSD88FuST80)을 기반으로 작성했습니다.
@@ -64,8 +60,7 @@ KANS 스터디 1주차 Docker없이 컨테이너 만들기 #격리
 ## 격리 기술 History
 
 
-![image.png](/assets/img/post/Docker%20없이%20컨테이너%20만들기(격리)/1.png)
-
+![image.png](/assets/img/post/Docker없이컨테이너만들기/1.png)
 
 출처: [https://speakerdeck.com/kakao/ige-dwaeyo-dokeo-eobsi-keonteineo-mandeulgi?slide=200](https://speakerdeck.com/kakao/ige-dwaeyo-dokeo-eobsi-keonteineo-mandeulgi?slide=200)
 
