Update Post: 2024-08-31-Docker 들여다보기

--- a/_posts/2024-08-31-Docker 들여다보기.md
+++ b/_posts/2024-08-31-Docker 들여다보기.md
@@ -20,6 +20,11 @@ KANS 스터디 1주차 Docker CI 알아보기
 > 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
+	CloudNet에서 주관하는 KANS(**K**ubernetes **A**dvanced **N**etworking **S**tudy)으로 쿠버네티스 네트워킹 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
+
+
+	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
+
 
 ### 들어가며
 
@@ -30,7 +35,13 @@ KANS 스터디 1주차 Docker CI 알아보기
 ## Docker CI
 
 
-Docker CI를 위해선 DinD(Docker in Docker) 혹은 컨테이너 내부에서도 docker를 조작할 수 있게 socket 마운트가 필요하다. 우선 socket에 대해 살펴보자.
+Docker CI를 위해선 컨테이너 내부에서 Docker를 사용할 수 있어야한다. 이를 위해 DinD(Docker in Docker) 혹은 컨테이너 내부에서도 docker를 조작할 수 있게 socket 마운트가 필요하다. 
+
+
+DinD는 컨테이너 내부에서 Docker 컨테이너를 실행하는 것을 의미한다. 예를 들어, GitLab Runner는 기본적으로 컨테이너기반이다. 
+
+
+docker는 socket 기반으로 통신한다. 그렇기에 docker가 사용하는 socket을 마운트하면, docker와 통신할 수 있다. 우선 docker.socket에 대해 살펴보자.
 
 
 #### socket
@@ -53,10 +64,7 @@ dockerd 3966 root    4u  unix 0xffff966d51faddc0      0t0 31848 /run/docker.sock
 ### DinD vs mount docker.socket
 
 
-이제 본격적으로 DinD와 socket 마운트 방식을 비교하자.
-
-
-[docker community](https://forums.docker.com/t/docker-in-docker-vs-mounting-var-run-docker-sock/9450)와 [jpetazzo Post](https://jpetazzo.github.io/2015/09/03/do-not-use-docker-in-docker-for-ci/)에서 DinD와 docker.socket mount의 차이가 잘 정리되어있다. 간단하게 요약하면, 아래와 같다.
+이제 본격적으로 DinD와 socket 마운트 방식을 비교하자. [docker community](https://forums.docker.com/t/docker-in-docker-vs-mounting-var-run-docker-sock/9450)와 [jpetazzo Post](https://jpetazzo.github.io/2015/09/03/do-not-use-docker-in-docker-for-ci/)에서 DinD와 docker.socket mount의 차이가 잘 정리되어있다. 간단하게 요약하면, 아래와 같다.
 
 1. `--privileged` 로 인해 SElinux와 같은 보안 모듈과 충돌할 수 있다.
 2. 내부 Docker는 COW 시스템 위에서 실행되기에 여러 파일시스템 조합이 작동되지 않을 수 있다.
@@ -66,6 +74,9 @@ dockerd 3966 root    4u  unix 0xffff966d51faddc0      0t0 31848 /run/docker.sock
 3. 도커 컨테이너에서 컨테이너를 생성해도, Host Docker에서 컨테이너가 생성되므로 캐시 효율성이 높아진다.
 
 결론적으로 보안상, 성능 차원에서 DinD보다 socket mount 방식이 강력히 추천된다. 이제 socket mount 방식으로 컨테이너안에서 이미지를 빌드하는 방법을 알아보자.
+
+
+### 실습
 
 
 #### 환경
@@ -121,7 +132,10 @@ CONTAINER ID   IMAGE             COMMAND                  CREATED       STATUS  
 서버의 IP주소의 8080 포트로 접속하면, 아래와 같이 Jenkins를 확인할 수 있다.
 
 
-![image.png](/assets/img/post/Docker%20들여다보기/1.png)
+![image.png](/assets/img/post/Docker%20CI%20알아보기/1.png)
+
+
+#### 젠킨스 CI
 
 
 docker pipeline pulgin을 설치 후 아래와 같은 간단한 파이프라인을 만든다.
@@ -189,7 +203,7 @@ pipeline {
 Job을 시작하면 아래와 같이 잘 동작한다.
 
 
-![image.png](/assets/img/post/Docker%20들여다보기/2.png)
+![image.png](/assets/img/post/Docker%20CI%20알아보기/2.png)
 
 
 또, 호스트 서버에서 이미지 확인할 수 있다.
@@ -216,7 +230,7 @@ alpine                 latest    324bc02ae123   5 weeks ago      7.8MB
 DinD는 도커자체에서 sudo 권한이 필요하므로, 컨테이너가 root 권한을 가지며 이는 보안상 좋지 않다. 이를 위해 Kaniko가 나오게된다. 루트 권한없이, 컨테이너 이미지를 빌드할 수 있는 도구이다. 구글에서 만들었으며, 윈도우 컨테이너 이미지는 지원하지 않는다고 한다.
 
 
-![kaniko-arch.webp](/assets/img/post/Docker%20들여다보기/3.webp)
+![kaniko-arch.webp](/assets/img/post/Docker%20CI%20알아보기/3.webp)
 
 
 출처: [https://blog.nashtechglobal.com/deep-dive-into-kaniko-understanding-the-architecture-and-workflow/](https://blog.nashtechglobal.com/deep-dive-into-kaniko-understanding-the-architecture-and-workflow/)
