fix: callout update

--- a/_posts/2025-03-03-Flannel 코드 분석하기 (1편).md
+++ b/_posts/2025-03-03-Flannel 코드 분석하기 (1편).md
@@ -42,22 +42,17 @@ Flannel이 CNI의 구현체가 되기 위해선 [CNI 명세서](https://github.c
 > CNI 구현체는 IPAM(IP Address Management)에 책임을 가지고 있습니다. 이것은 IP주소 할당을 포함하여 적절한 라우팅 정보를 입력하는 것까지 포함됩니다.
 
 
-	CNI 구현체는 컨테이너 네트워크 연결에 책임을 가지고 있습니다. 컨테이너가 네트워크에 연결되기 위한 모든 작업에 책임을 가집니다.
-
-
-	CNI 구현체는 IPAM(IP Address Management)에 책임을 가지고 있습니다. 이것은 IP주소 할당을 포함하여 적절한 라우팅 정보를 입력하는 것까지 포함됩니다.
-
 
 여기서 우선 컨테이너 네트워크 연결 부분을 자세히 살펴보자. 컨테이너 통신은 크게 호스트 내부 통신, 클러스터 내 통신, 외부 통신 3가지로 구분된다. Flannel에선 각각을 어떻게 구현하고 있을까?
 
 
-#### 호스트 내부 통신
+##### 호스트 내부 통신
 
 
 위에서도 살짝 언급했지만, Docker와 같이 브릿지 방식으로 같은 노드 내의 파드를 연결한다. 
 
 
-#### 클러스터 내 통신
+##### 클러스터 내 통신
 
 
 우선 다른 노드에 위치하는 파드와 통신을 위해선 해당 파드가 어떤 노드에 위치해 있는지 알아야 한다. 이를 위해 가령 “파드1은 노드1에 있습니다.“와 같은 정보를 ETCD에 저장하고 각 노드의 Flannel 데몬이 이를 확인하고 라우팅 정보를 업데이트한다. 
@@ -69,7 +64,7 @@ Flannel이 CNI의 구현체가 되기 위해선 [CNI 명세서](https://github.c
 ![image.png](/assets/img/post/Flannel%20코드%20분석하기%20(1편)/1.png)
 
 
-#### 외부 통신
+##### 외부 통신
 
 
 구글 DNS(8.8.8.8)와 같은 클러스터 외부의 기기와 통신을 할 땐 iptables를 이용한다. Iptables는 리눅스 커널에 구현된 netfilter의 인터페이스이며 netfilter는 규칙을 기반으로 패킷을 처리하는 엔진이다. 커널에서 패킷을 관찰하다 규칙에 맞는 패킷을 확인하면 정해진 동작을 취한다. 
@@ -97,7 +92,7 @@ flannel은 라우팅 정보 교환을 etcd를 통해 진행하는데, 이와 관
 ### Flannel CNI-Plugin 
 
 
-[Flannel CNI-Plugin](https://github.com/flannel-io/cni-plugin/blob/main/flannel_linux.go)의 `flannel_linux.go` 코드를 살펴보면 bridge plugin에 컨테이너 통신을 위임하고 있는 모습을 볼 수 있다. 추가로 IPAM 또한 쿠버네티스 내장 IPAM에게 위임하여 default IPAM을 사용하는 것을  볼 수 있다.
+[Flannel CNI-Plugin](https://github.com/flannel-io/cni-plugin/blob/main/flannel_linux.go)의 `flannel_linux.go` 코드를 살펴보면 bridge plugin에 컨테이너 통신을 위임하고 있는 모습을 볼 수 있다. 추가로 IPAM 또한 쿠버네티스 내장 IPAM에게 위임하여 사용하는 것을  볼 수 있다.
 
 
 ```go
@@ -236,7 +231,7 @@ ip masq 구성까지 끝났으면 관련 주요 정보를 모두 `/run/flannel/s
 ```
 
 
-요약하면, 가장 중요한 라우팅 정보를 책임지는 서브넷 매니저를 먼저 생성한다. 이후 백엔드 구성을 위해 백엔드 매니저와 외부 통신을 위한 트래픽 매니저를 연이어 생성한다. 여기까지 진행이 완료되면 주요 요소의 설정이 완료되었기에 Config를 `/run/flannel/subnet.env` 경로에 백업한다. 백엔드를 고루틴으로 실행하고, 클러스터에 현재 노드의 네트워크 구성이 완료되었음을 알린다.
+요약하면, 라우팅 정보를 책임지는 서브넷 매니저를 먼저 생성한다. 이후 백엔드 구성을 위해 백엔드 매니저와 외부 통신을 위한 트래픽 매니저를 연이어 생성한다. 여기까지 진행이 완료되면 주요 요소의 설정이 완료되었기에 Config를 `/run/flannel/subnet.env` 경로에 백업한다. 백엔드를 고루틴으로 실행하고, 클러스터에 현재 노드의 네트워크 구성이 완료되었음을 알린다.
 
 
 ### 마치며
