--- a/_posts/2025-04-13-서비스 매시와 istio.md
+++ b/_posts/2025-04-13-서비스 매시와 istio.md
@@ -19,6 +19,11 @@ mermaid: true
 > 스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
 
 
+	CloudNet에서 주관하는 istio(Istio Hands-on Study) 1기 스터디입니다. 아래의 글은 스터디의 내용을 기반으로 작성했습니다.
+
+
+	스터디에 관심이 있으신 분은 [CloudNet Blog](/c9dfa44a27ff431dafdd2edacc8a1863)를 참고해주세요.
+
 
 ### 들어가며
 
@@ -65,7 +70,7 @@ Istio는 서비스 매시 구현체 중 하나로, 서비스 매시가 마땅히
 구조는 각 애플리케이션을 제어할 수 있는 **전용 프록시**를 두고, 프록시에 대한 **설정을 중앙 데몬에서 제어**하는 형태이다. 여기서 간략하게 언급하면 Proxy의 설정은 API 방식으로 제어 가능하다. 별도의 restart가 필요없다.
 
 
-![istio-arch.svg](/assets/img/post/서비스%20매시와%20istio/2.svg)
+![image.png](/assets/img/post/서비스%20매시와%20istio/2.png)
 
 
 출처: [https://istio.io/latest/docs/ops/deployment/architecture/](https://istio.io/latest/docs/ops/deployment/architecture/)
@@ -100,7 +105,7 @@ Istiod는 Golang으로 작성되었고 Pilot, Galley, Citadel 3개의 요소가 
 아래의 그림을 통해 각 구성요소의 역할을 확인할 수 있다.
 
 
-![https://istio.io/latest/docs/concepts/security/](/assets/img/post/서비스%20매시와%20istio/4.svg)
+![image.png](/assets/img/post/서비스%20매시와%20istio/4.png)
 
 
 #### Data Plane
@@ -109,13 +114,16 @@ Istiod는 Golang으로 작성되었고 Pilot, Galley, Citadel 3개의 요소가 
 Data Plane은 프록시 집합을 의미한다. 프록시로는 Envoy를 사용하고 있다. Envoy에 대한 설명은 조금 뒤에서 살펴볼 예정이다. 아래 그림과 같이 중앙에서 설정한 규칙으로 **각 애플리케이션에 붙어있는 프록시가 네트워크를 제어**한다.
 
 
-![https://istio.io/latest/docs/ops/deployment/architecture/](/assets/img/post/서비스%20매시와%20istio/2.svg)
+![image.png](/assets/img/post/서비스%20매시와%20istio/2.png)
 
 
 Envoy는 멀티 스레딩을 사용하며, 각 서비스에 대해 Listener를 통해 요청을 수신하며 실제 엔드포인트(Pod)로 라우팅한다. 
 
 
-![https://www.envoyproxy.io/docs/envoy/latest/intro/life_of_a_request](/assets/img/post/서비스%20매시와%20istio/6.svg)
+![image.png](/assets/img/post/서비스%20매시와%20istio/6.png)
+
+
+출처: [https://www.envoyproxy.io/docs/envoy/latest/intro/life_of_a_request](https://www.envoyproxy.io/docs/envoy/latest/intro/life_of_a_request)
 
 
 이제 프록시로 사용하는 Envoy에 대해 살펴보자.
@@ -499,6 +507,3 @@ retry 옵션을 넣고 나서는, 대부분 성공하는 것을 볼 수 있다.
 
 ![image.png](/assets/img/post/서비스%20매시와%20istio/14.png)
 
-
-### 마치며
-이번 1주차에서는 서비스 매시와 istio에 대해 알아보고, 간략하게 실습을 진행해보면서 istio의 기능들을 체험해볼 수 있었다.
