--- a/_posts/2025-04-27-복원성.md
+++ b/_posts/2025-04-27-복원성.md
@@ -16,13 +16,16 @@ istio 네트워크 복원성 살펴보기
 ### 들어가며
 
 
-마이크로서비스 환경에 들어오면서 모든 서비스는 네트워크를 통하게된다. 그렇기에 네트워크 회복탄련성이 중요해진다. 여기서는 실제 서비스 환경 그리고 MSA에서 자주 사용하는 패턴인 타임아웃, 리트라이, 서킷 브레이커 등을 설정한다.
+마이크로서비스 환경에 들어오면서 모든 서비스는 네트워크를 통하게된다. 그렇기에 네트워크 회복탄련성이 중요해진다. 여기서는 실제 서비스 환경 그리고 MSA에서 자주 사용하는 패턴인 **타임아웃, 리트라이, 서킷 브레이커** 등을 설정한다.
 
 
 ### 실습 환경
 
 
 앞의 포스트와 동일한 k8s(kind), istio 구성으로 진행한다. 여기서는 실습 파일에서 수정이 필요하다.
+
+
+실습에 진행되는 리소스는 “istio ingress → simple-web → simple-backend” 구조이다.
 
 
 `simple-service-locality.yaml` 파일에서 version label을 아래와 같이 달아준다.
@@ -456,7 +459,7 @@ for in in {1..50}; do curl -s http://simple-web.istioinaction.io:30000 | jq ".up
 ## Timeout & Retry
 
 
-애플리케이션에서 다른 서비스 요청이 필요할 때 retry와 timeout설정이 필요하다. 간혈적인 이상(네트워크 등)을 제어하기 위해 retry 설정이 필요하고, 응답을 무한정 기다릴 수 없고 이는 커넥션 관리에도 좋지 않으니 timeout 설정이 필요하다. istio는 해당 기능을 모두 제공하는데, 여기서 실습해본다.
+애플리케이션에서 다른 서비스 요청이 필요할 때 재시도와 타임아웃설정이 필요하다. 간혈적인 이상(네트워크 등)을 제어하기 위해 retry 설정이 필요하고, 응답을 무한정 기다릴 수 없고 이는 커넥션 관리에도 좋지 않으니 timeout 설정이 필요하다. istio는 해당 기능을 모두 제공하는데, 여기서 직접 실습해본다.
 
 
 #### timeout
@@ -678,8 +681,7 @@ jq .code  0.00s user 0.00s system 22% cpu 0.034 total
 ```
 
 
-
-
+kiali에서 확인해도 동일하게 간혈적으로 에러가 뜨는 것을 볼 수 있다.(빨간, 노란색 선)
 
 
 ![image.png](/assets/img/post/복원성/5.png)
