Update Post: 2025-04-27-복원성

--- a/_posts/2025-04-27-복원성.md
+++ b/_posts/2025-04-27-복원성.md
@@ -619,7 +619,7 @@ k edit -n istioinaction virtualservices.networking.istio.io simple-backend-vs
     retries:
       attempts: 2 # 최대 재시도 횟수
       retryOn: gateway-error,connect-failure,retriable-4xx # 다시 시도해야 할 오류
-      **perTryTimeout**: 300ms # 타임 아웃
+      perTryTimeout: 300ms # 타임 아웃
       retryRemoteLocalities: true # 재시도 시 다른 지역의 엔드포인트에 시도할지 여부
 ```
 
