Update Post: 2025-04-27-트래픽 제어

--- a/_posts/2025-04-27-트래픽 제어.md
+++ b/_posts/2025-04-27-트래픽 제어.md
@@ -1059,8 +1059,16 @@ ENDPOINT            STATUS      OUTLIER CHECK     CLUSTER
 ![image.png](/assets/img/post/트래픽%20제어/16.png)
 
 
-### 마치며
+## 마치며
 
 
-이번 편에서는 istio에서 제공하는 트래픽 제어 방식(통제, shifting, mirroring, 외부 서비스와 연결 및 차단)에 대해 살펴봤다. 다음 편에서는 istio의 네트워크 복원성에 대해 살펴볼 예정이다.
+이번 편에서는 istio에서 제공하는 트래픽 제어 방식(control, shifting, mirroring, 외부 서비스와 연결 및 차단)에 대해 살펴봤다. 이번 편을 간단히 요약하면 아래와 같다.
+
+
+istio에서는 deployment는 새로운 기능을 가진 리소스를 의미하고, release는 해당 리소스로 트래픽이 라우팅되는 경우를 의미한다.
+VirtualService에서 가중치(Shifiting), Mirroring이 가능하며 목적 경로로 subset을 선택할 수 있다.
+Destionation Rule에서 subsets을 정의할 수 있으며, subset은 각 서비스의 "버전"을 나타내는 집합이다.
+
+
+다음 편에서는 istio의 네트워크 복원성에 대해 살펴볼 예정이다.
 
