Update Post: 2025-04-13-서비스 매시와 istio

--- a/_posts/2025-04-13-서비스 매시와 istio.md
+++ b/_posts/2025-04-13-서비스 매시와 istio.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: 서비스 메시란
+title: 서비스 메시와 istio
 date: 2025-04-12 09:00 +0900 
-description: 서비스 메시 살펴보기
+description: 서비스 메시와 istio 살펴보기
 category: [Kubernetes, Network] 
 tags: [istio, CloudNet, Kubernetes, Network, istio#1, Service mesh] 
 pin: false
 math: true
 mermaid: true
 ---
-서비스 메시란
+서비스 메시와 istio 살펴보기
 <!--more-->
 
 
